# snap-price

./: .gitignore  README.md  package-lock.json  package.json  start-dev.ps1  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: .env.example  .env.save  Dockerfile  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tsconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 48ebd02d30ce_init.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/models/: analysis.py  user.py
apps/api/app/routers/: analyze.py  auth.py  history.py
apps/api/app/schemas/: analyze.py  auth.py  history.py
apps/api/app/services/: auth_service.py  history_service.py  openai_service.py  search_service.py
apps/api/prisma/: config.ts  schema.prisma  seed.ts
apps/api/scripts/: seed.py
apps/api/src/: app.module.ts  main.ts
apps/api/src/analyze/: analyze.controller.ts  analyze.module.ts  analyze.service.ts  openai.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/api/src/health/: health.controller.ts
apps/api/src/history/: history.controller.ts  history.service.ts
apps/api/src/prisma/: prisma.service.ts
apps/mobile/: .env.example  app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  login.tsx  result.tsx
apps/mobile/app/(tabs)/: _layout.tsx  camera.tsx  history.tsx  index.tsx  profile.tsx
apps/mobile/src/hooks/: useAnalyze.ts
apps/mobile/src/services/: api.ts
apps/mobile/src/store/: useAnalyzeStore.ts  useAuthStore.ts
apps/mobile/src/types/: analyze.ts
