[tool.poetry]
name = "snapprice-api"
version = "0.1.0"
description = "SnapPrice REST API — FastAPI + OpenAI Vision"
authors = ["Andre Luz da Silva"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
openai = "^1.58.1"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"
ruff = "^0.8.0"

[tool.taskipy.tasks]
dev      = { cmd = "uvicorn app.main:app --reload --port 3000", help = "Sobe o servidor em modo dev" }
migrate  = { cmd = "alembic upgrade head", help = "Roda todas as migrations" }
rollback = { cmd = "alembic downgrade -1", help = "Desfaz a última migration" }
makemig  = { cmd = "alembic revision --autogenerate -m", help = "Cria uma nova migration" }
seed     = { cmd = "python scripts/seed.py", help = "Popula o banco com dados iniciais" }
test     = { cmd = "pytest", help = "Roda os testes" }
lint     = { cmd = "ruff check app", help = "Verifica o código" }
format   = { cmd = "ruff format app", help = "Formata o código" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
